<?xml version="1.0"?>
<package format="3">
  <name>system_health_monitor</name>
  <version>0.0.0</version>
  <description>A package to monitor system health.</description>
  <maintainer email="alan@todo.todo">alan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>diagnostic_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>psutil</exec_depend>
  <exec_depend>ntplib</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
